[tool.poetry]
name = "beyond-ai-paper-finder"
version = "0.1.0"
description = ""
authors = ["n-kats <n-kats19890214@hotmail.co.jp>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "bapf" }]

[tool.poetry.dependencies]
python = "^3.11"
pdf2image = "^1.17.0"
openai = "^1.61.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
ipython = "^8.32.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
